[gd_scene load_steps=3 format=2]

[ext_resource path="res://InterfaceController.gd" type="Script" id=1]
[ext_resource path="res://Unnamed.png" type="Texture" id=2]

[node name="InterfaceController" type="CanvasLayer" groups=["InterfaceController"]]
script = ExtResource( 1 )

[node name="InterfaceController" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -853.0
margin_bottom = -535.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="RichTextLabel" parent="InterfaceController"]
margin_left = 44.0
margin_top = 29.0
margin_right = 86.0
margin_bottom = 69.0
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="RichTextLabel" parent="InterfaceController"]
margin_left = 86.0
margin_top = 29.0
margin_right = 282.0
margin_bottom = 49.0
text = "1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreLabel" type="RichTextLabel" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = 42.0
margin_right = -5.0
margin_bottom = 82.0
text = "Score:"

[node name="ScoreValue" type="RichTextLabel" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = 43.0
margin_right = 132.0
margin_bottom = 75.0
text = "1000"

[node name="Star1" type="TextureRect" parent="Popup"]
visible = false
margin_left = 13.0
margin_top = 102.0
margin_right = 98.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( 42, 37 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star2" type="TextureRect" parent="Popup"]
visible = false
margin_left = 104.0
margin_top = 102.0
margin_right = 189.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( 42, 37 )
texture = ExtResource( 2 )
expand = true

[node name="Star3" type="TextureRect" parent="Popup"]
visible = false
margin_left = 196.0
margin_top = 102.0
margin_right = 281.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( 42, 37 )
texture = ExtResource( 2 )
expand = true

[node name="WinLose" type="RichTextLabel" parent="Popup"]
margin_right = 298.0
margin_bottom = 92.0
text = "You Won!"

[node name="NextLevelButton" type="Button" parent="Popup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -97.0
margin_top = -73.0
text = "Next Level"

[node name="RestartLevelButton" type="Button" parent="Popup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -73.0
margin_right = 97.0
text = "Restart Level"

[node name="Tween" type="Tween" parent="."]

[connection signal="button_down" from="Popup/NextLevelButton" to="." method="_on_NextLevelButton_button_down"]
[connection signal="button_down" from="Popup/RestartLevelButton" to="." method="_on_RestartLevelButton_button_down"]
